--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="theme-color" content="#000000" />
-    <title>JOHNNIE WALKER PROMOTION</title>
+    <title>DETOL PROMOTION</title>
     <style>
       body{
         background-image: url(./images/detol.jpeg);
