--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="theme-color" content="#000000" />
-    <title>DETOL PROMOTION</title>
+    <title></title>
     <style>
       body{
-        background-image: url(./images/detol.jpeg);
+        background-image: url(./images/bail.jpeg);
         background-size: cover;
         background-repeat: no-repeat;
       }
