--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,10 @@
     <title></title>
     <style>
       body{
-        background-image: url(./images/bail.jpeg);
+        background-image: url(./images/b.jpeg);
         background-size: cover;
         background-repeat: no-repeat;
+        
       }
     </style>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
